--- a/views/categoryPage.ejs
+++ b/views/categoryPage.ejs
@@ -8,14 +8,17 @@
   <body>
     <h1><%=title%></h1>
     <ul>
-      <% items.forEach(item=>{ %>
-      <li id="<%=item.id%>">
-        <p><%=item.title%></p>
-        <p><%=item.description%></p>
-        <p><%=item.price%></p>
+      <% instruments.forEach(item=>{ %>
+      <li >
+        <p><%=item.instrument%></p>
+        <p>Quantity: <%=item.quantity%></p>
+        
+        <p>Price: $<%=item.price%></p>
+        <a href="/product/<%=item.id%>">View Instrument</a>
       </li>
 
       <%})%>
     </ul>
+    <a href="/">Homepage</a>
   </body>
 </html>
