create product route

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Music Instrument Store</h1>
-    <section><a href="/orchestral">Orchestral</a></section>
-    <section><a href="/guitars">Guitars</a></section>
-    <section><a href="/keyboards">Keyboards</a></section>
-    <section><a href="/drums">Drums</a></section>
+    <section><a href="/category/Orchestral">Orchestral</a></section>
+    <section><a href="/category/Guitars">Guitars</a></section>
+    <section><a href="/category/Keyboards">Keyboards</a></section>
+    <section><a href="/category/Drums">Drums</a></section>
 </body>
 </html>
