--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1><%=title%></h1>
-    <p><%=description%></p>
-    <p><%=price%></p>
+    
+    <p>Price: $<%=price%></p>
+    <p>Quantity: <%=quantity%></p>
 </body>
 </html>
