--- a/views/categoryForm.ejs
+++ b/views/categoryForm.ejs
@@ -10,6 +10,7 @@
     <form action="/category/add" method="POST">
 <label for="categoryName">Category Name:</label>
 <input type="text" name="categoryName" id="categoryName">
+<button type="submit">Submit</button>
 
     </form>
 </body>
