--- a/views/instrumentForm.ejs
+++ b/views/instrumentForm.ejs
@@ -1,3 +1,5 @@
+<!-- TODO have manufacturer and category selected when editing item -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,24 +11,27 @@
     <h1><%=title%></h1>
     <form action="/product/add" method="POST">
       <label for="instrument">Instrument: </label>
-      <input type="text" id="instrument" name="instrument" />
+      <input value="<%=instrument%>" type="text" id="instrument" name="instrument" />
       <label for="quantity">Quantity: </label>
-      <input type="text" id="quantity" name="quantity" />
+      <input value="<%=quantity%>" type="text" id="quantity" name="quantity" />
       <label for="price">Price: </label>
-      <input type="text" id="price" name="price" />
+      <input value="<%=price%>" type="text" id="price" name="price" />
       <label for="manufacturer">Manufacturer: </label>
       <select id="manufacturer" name="manufacturer">
+        <option value="">--Please choose an option--</option>
         <% manufacturerList.forEach(({manufacturer})=>{%>
         <option value="<%=manufacturer%>"><%=manufacturer%></option>
         <% })%>
       </select>
       <label for="category">Category: </label>
       <select id="category" name="category">
+        <option value="">--Please choose an option--</option>
         <% categoryList.forEach(({category})=>{%>
         <option value="<%=category%>"><%=category%></option>
         <% })%>
       </select>
       <button type="submit">Submit</button>
     </form>
+    <a href="/">Go Home</a>
   </body>
 </html>
