--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -11,5 +11,6 @@
     <p>Price: $<%=price%></p>
     <p>Quantity: <%=quantity%></p>
     <a href="/product/edit/<%=id%>">Edit Item</a>
+    <a href="/">Home</a>
   </body>
 </html>
